// Vitest Snapshot v1

exports[`renders 1`] = `
<button
  class="sc-bcXHqe bQFwRY"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bcXHqe hzLSTn"
>
  foo
</button>
`;
